# flaskr

./: README.md  pyproject.toml
.github/workflows/: test.yml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
