[project]
name = "flaskr"
version = "0.1.0"
description = "A simple blog web-app made in flask "
dependencies = ["flask", "pytest", "coverage", "autopep8"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]
